<resources>
    <string name="app_name">InternLink</string>
    <string-array name="languages">
        <item>English</item>
        <item>Français</item>
    </string-array>
    <string-array name="announcement_filters">
        <item>All</item>
        <item>Read</item>
        <item>Unread</item>
        <item>Latest</item>
        <item>Earliest</item>
    </string-array>
    <string-array name="stipend_options">
        <item>Paid</item>
        <item>Unpaid</item>
    </string-array>
    <!-- Expertise -->

    <string name="career_matching">AI Career Matching</string>

    <string name="skill_development">Skill Development</string>

    <string name="employer_solutions">Employer Solutions</string>


    <!-- Social -->

    <string name="linkedin">Visit InternLink on LinkedIn</string>

    <string name="twitter">Visit InternLink on Twitter</string>

    <string name="website">Visit InternLink Website</string>

    <string name="menu_help">Help</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Send Feedback</string>
    <string name="menu_about">About</string>

    <string name="menu">Menu</string>
    <string name="edit">Edit</string>
    <string name="filter">Filter</string>
    <string name="new_message">New Message</string>
    <string name="profile_image">Profile Image</string>
    <string name="verified">Verified</string>
</resources>